--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "prettier . --check"
   },
   "dependencies": {
     "next": "15.2.3",
@@ -24,5 +24,6 @@
     "prettier": "3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.7.0"
 }
