refactor: switch to pnpm

--- a/.github/workflows/node.ci.yaml
+++ b/.github/workflows/node.ci.yaml
@@ -20,13 +20,13 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: yarn --immutable
+        run: pnpm --frozen-lockfile
 
       - name: Lint source code
-        run: yarn lint
+        run: pnpm lint
 
   deps-audit:
     name: Audit dependencies
@@ -39,13 +39,13 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
 
       - name: Run dependencies audit
-        run: yarn --immutable
+        run: pnpm --frozen-lockfile
 
       - name: Lint source code
-        run: yarn npm audit --all
+        run: pnpm audit
 
   semgrep:
     name: Audit source code
