--- a/.github/workflows/node.ci.yaml
+++ b/.github/workflows/node.ci.yaml
@@ -26,7 +26,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm --frozen-lockfile
+        run: pnpm i --frozen-lockfile
 
       - name: Lint source code
         run: pnpm lint
@@ -48,7 +48,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Run dependencies audit
-        run: pnpm --frozen-lockfile
+        run: pnpm i --frozen-lockfile
 
       - name: Lint source code
         run: pnpm audit
