--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier . --check"
+    "lint": "prettier . --check && eslint ."
   },
   "dependencies": {
     "next": "15.2.3",
@@ -14,16 +14,22 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.23.0",
+    "@next/eslint-plugin-next": "^15.2.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.2.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "3.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   },
   "packageManager": "pnpm@10.6.5"
 }
