--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "makemigrations": "npx prisma migrate dev",
     "lint": "prettier . --check && eslint ."
   },
   "dependencies": {
+    "@prisma/client": "6.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -27,9 +29,17 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "3.5.3",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
-  "packageManager": "pnpm@10.6.5"
+  "packageManager": "pnpm@10.6.5",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/engines",
+      "esbuild",
+      "prisma"
+    ]
+  }
 }
