--- a/.github/workflows/node.ci.yaml
+++ b/.github/workflows/node.ci.yaml
@@ -31,6 +31,28 @@ jobs:
       - name: Lint source code
         run: pnpm lint
 
+  build:
+    name: Build
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4
+        with:
+          cache: 'pnpm'
+
+      - name: Run dependencies audit
+        run: pnpm i --frozen-lockfile
+
+      - name: Audit dependencies
+        run: pnpm build
+
   deps-audit:
     name: Audit dependencies
     runs-on: ubuntu-22.04
