--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,21 @@ services:
     tty: true
     stdin_open: true
 
+  valkey:
+    image: valkey/valkey:8.1
+    container_name: loop-room-kv
+    ports:
+      - '127.0.0.1:6379:6379'
+    command: valkey-server --port 6379
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+
 volumes:
   pgdata:
     driver: local
