--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,9 @@ services:
         reservations:
           cpus: '0.25'
           memory: 256M
+    security_opt:
+      - no-new-privileges:true
+    read_only: true
 
 volumes:
   pgdata:
