--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start",
     "makemigrations": "npx prisma migrate dev",
     "migrate": "npx prisma migrate deploy",
-    "lint": "prettier . --check && eslint ."
+    "lint": "prettier . --check && eslint .",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "6.5.0",
+    "ioredis": "^5.6.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -38,6 +40,7 @@
   "packageManager": "pnpm@10.6.5",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@prisma/client",
       "@prisma/engines",
       "esbuild",
       "prisma"
