feat: integrate next-auth as auth solution

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # DATABASE CONNECTIONS
 DATABASE_URL=postgres://user:password@127.0.0.1:5430/main
 KV_URL=valkey://localhost:6379
+
+# AUTH SECRET
+AUTH_SECRET="secret" # you can generate one by running "npx auth secret"
+
+# AUTH PROVIDERS
+GITHUB_ID=github_app_client_id
+GITHUB_SECRET=github_app_client_secret
