--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@prisma/client": "6.5.0",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.7",
@@ -24,6 +27,7 @@
     "@eslint/js": "^9.23.0",
     "@next/eslint-plugin-next": "^15.2.3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -43,7 +47,8 @@
       "@prisma/client",
       "@prisma/engines",
       "esbuild",
-      "prisma"
+      "prisma",
+      "sharp"
     ]
   }
 }
